Added a new dynamic feature module to fetch Covid-19 data
Fetching it from the API : https://about-corona.net.
Am not displaying anything yet.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string-array name="supported_modules">
         <item>@string/title_usgs</item>
     </string-array>
+    <string name="title_covid19">Covid 19</string>
 </resources>
