--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,5 @@
     <string-array name="supported_modules">
         <item>@string/title_usgs</item>
     </string-array>
-    <string name="title_covid19">Covid 19</string>
+    <string name="title_covid19">Countries affected by COVID-19</string>
 </resources>
