Added california covid cases

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
         <item>@string/title_usgs</item>
     </string-array>
     <string name="title_covid19">Countries affected by COVID-19</string>
+    <string name="title_cacovid19">California counties affected by Covid-19</string>
 </resources>
