--- a/cacovid19/src/main/res/values/strings.xml
+++ b/cacovid19/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="number_of_deaths">%1s deaths</string>
     <string name="number_of_recoveries">%1s recoveries</string>
     <string name="number_of_critical">%1s critical</string>
-    <string name="number_of_countries">%1s countries affected</string>
+    <string name="number_of_countries">%1s countries</string>
     <string name="worldwide_total">Worldwide</string>
     <string name="sort_by_cases">Sort by cases</string>
     <string name="cases">cases</string>
@@ -15,4 +15,5 @@
     <string name="sort_by_deaths">Sort by deaths</string>
     <string name="deaths">deaths</string>
     <string name="sorted_by">Sorted by %1s</string>
+    <string name="title_cacovid19">California counties affected by Covid-19</string>
 </resources>
