Added an error screen for the covid modules

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     </string-array>
     <string name="title_covid19">Countries affected by COVID-19</string>
     <string name="title_cacovid19">California counties affected by Covid-19</string>
+    <string name="error_api">Error fetching from API</string>
 </resources>
