Adding numbering in the covid modules

--- a/cacovid19/src/main/res/values/strings.xml
+++ b/cacovid19/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="deaths">deaths</string>
     <string name="sorted_by">Sorted by %1s</string>
     <string name="title_cacovid19">California counties affected by Covid-19</string>
+    <string name="ordered_name">%1d. %1s</string>
 </resources>
